# bincode

./: .gitignore  Cargo.toml  README.md  SECURITY.md
benches/: string.rs  varint.rs
compatibility/: Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
docs/: spec.md
src/: config.rs  error.rs  lib.rs
src/de/: decoder.rs  impl_core.rs  impls.rs  mod.rs  read.rs
src/enc/: encoder.rs  impls.rs  mod.rs  write.rs
src/features/: impl_alloc.rs  impl_std.rs
src/features/serde/: de_borrowed.rs  de_owned.rs  mod.rs  ser.rs
src/varint/: encode_signed.rs  leb128.rs  mod.rs
tests/: alloc.rs  basic_types.rs  derive.rs  error_size.rs  serde.rs
tests/issues/: issue_427.rs  issue_431.rs  issue_459.rs  issue_467.rs  issue_474.rs  issue_498.rs  issue_500.rs  issue_523.rs  issue_537.rs  issue_547.rs  issue_570.rs  issue_592.rs  issue_614.rs
