[package]
name = "bincode_compatibility-next"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode_2 = { path = "..", package = "bincode-next", version = "2.0.2", features = [
    "serde",
] }
bincode_1 = { version = "1", package = "bincode" }
serde = { version = "1", features = ["derive"] }
rand = "0.9"

[lints.clippy]
empty-line-after-doc-comments = "allow"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
