[package]
name = "bincode_derive-next"
version = "2.0.3" # remember to update bincode
authors = [
    "Xinyu Yang <pana.yang@hotmail.com>",
    "Zoey Riordan <zoey@dos.cafe>",
    "Victor Koenders <bincode@trangar.com>",
    "The bincode-next & bincode developers",
]
edition = "2021"
rust-version = "1.85.0"

repository = "https://github.com/Apich-Organization/bincode"
documentation = "https://docs.rs/bincode_derive_next"
readme = "./readme.md"
categories = ["encoding", "network-programming"]
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
license = "MIT"
description = "Implementation of #[derive(Encode, Decode)] for bincode-next"

[lib]
proc-macro = true

[dependencies]
virtue = "0.0.18"
